--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,9 @@ log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 
 log_cli = true
+
+
+#filterwarnings =
+#    error
+#    ignore::UserWarning
+#    ignore:function ham\(\) is deprecated:DeprecationWarning
